# django-htmx-todo

./: README.rst  docker-compose.dev.yml.default  manage.py  pyproject.toml  requirements.in  requirements.txt
docker/backend/: Dockerfile  run-dev.sh
docker/postgres/: dump.sh  restore.sh
templates/: base.html
templates/tasks/: done_state.html  form.html  list.html
templates/tasks/partials/: list-form.html  list-task.html  list.html
tests/: test_list.py
todo/: asgi.py  mypy_plugin.py  settings.py  urls.py  wsgi.py
todo/tasks/: admin.py  forms.py  models.py  urls.py  views.py
todo/tasks/migrations/: 0001_initial.py
