[project]
name = "todo-site"
version = "0.1"

[tool.pytest.ini_options]
addopts = "--cov=todo --cov-report=term --cov-report=html"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "todo.settings"
DJANGO_CONFIGURATION = "Test"

[tool.coverage.run]
source = ["todo"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
multi_line_output = 3
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
lines_after_imports = 2
skip = [".git", "node_modules", ".tox"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
plugins = [
    "./todo/mypy_plugin.py",
]

[tool.django-stubs]
django_settings_module = "todo.settings"

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = [
    "E501",  # line length
]
exclude = [
    ".tox",
    ".git",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "static_root",
]

[tool.djlint]
profile="django"
